<resources>
    <string name="app_name">AndroidFoodApp</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="product_title">Product Title</string>
    <string name="password">Password</string>
    <string name="contact_details">Contact Details</string>
    <string name="address">Address</string>
    <string name="castle_park_rd_bangor_bt20_4td">Castle Park Rd, Bangor BT20 4TD</string>
    <string name="map">Map</string>
    <string name="click_map_to_view_bigger_size_on_google_maps">Click map to view bigger size on Google Maps</string>
    <string name="contact_hours">Contact Hours</string>
    <string name="mon_fri_09_00_to_17_00">Mon - Fri : 09:00 to 17:00</string>
    <string name="sat_09_00_to_15_30">Sat : 09:00 to 15:30</string>
    <string name="sun_09_00_to_13_00">Sun : 09:00 to 13:00</string>
    <string name="contact_info">Contact Info</string>
    <string name="contact_number_01169420330">Contact Number: 01169420330</string>
    <string name="email_aandndfb_btinternet_co_uk">Email: aandndfb@btinternet.co.uk</string>
    <string name="other_info">Other Info</string>
    <string name="all_data_entered_by_users_is_processed_according_to_uk_law_and_will_not_be_stored_longer_than_needed">All data entered by users is processed according to UK law and will not be stored longer than needed.</string>
    <string name="our_happy_customers_carousel">Our happy customers Carousel</string>
    <string name="all_images_are_free_of_use_from_fotor">All images are free of use from Fotor.</string>
    <string name="basket">Basket</string>
    <string name="package_contents">Package Contents</string>
    <string name="enter_an_address">Enter an address</string>
    <string name="addressab">Address</string>
    <string name="enter_details">Enter Details</string>
    <string name="fields_with_symbol_are_required_only_enter_address_if_delivery">Fields with symbol are required. Only enter address if delivery.</string>
    <string name="required">*</string>
    <string name="enter_a_date">Enter a Date</string>
    <string name="date">Date</string>
    <string name="enter_a_time">Enter a Time</string>
    <string name="pickup_or_delivery">Pickup or Delivery?</string>
    <string name="make_order">Make Order</string>
    <string name="view_orders">View Orders</string>
    <string name="menu">Menu</string>
    <string name="previous_orders">Previous Orders</string>
    <string name="help">Help</string>
    <string name="contact">Contact</string>
    <string name="sign_out">Sign Out</string>
    <string name="description">Description</string>
    <string name="product_name">Product Name</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_to_the_ards_and_north_down_food_bank_app">Welcome to the Ards and North Down Food Bank app</string>
    <string name="phone_number">Phone Number</string>
    <string name="_07746969898">07746969898</string>
    <string name="_333">333</string>
    <string name="name">Name</string>
    <string name="stewie">Stewie</string>
    <string name="item_no_1">Item No 1</string>
    <string name="help_menu">Help Menu</string>
    <string name="choose_the_items_to_be_added_to_your_package">Choose the items to be added to your package</string>
    <string name="on_the_main_menu_browse_the_categories_and_press_the_one_that_your_item_belongs_to_feel_free_to_look_through_each_category_items_will_only_be_added_to_your_basket_once_the_basket_button_is_pressed_then_press_the_item_s_that_you_wish_to_add_to_your_basket_you_can_add_as_many_or_as_little_as_you_like_from_one_or_more_categories">On the main menu, browse the categories and press the one that your item belongs to, feel free to look through each category, items will only be added to your basket once the basket button is pressed. Then press the item(s) that you wish to add to your basket. You can add as many or as little as you like, from one or more categories.</string>
    <string name="entered_the_required_details_to_complete_your_package_request">Entered the required details to complete your package request</string>
    <string name="once_you_add_the_amount_of_items_that_you_need_press_the_basket_button_to_view_your_basket_and_to_see_the_package_contents_on_this_page_you_should_fill_out_the_required_details_once_you_sign_in_your_name_and_number_is_already_stored_you_will_only_need_to_enter_your_address_if_your_package_is_a_delivery_once_you_have_entered_your_details_press_the_make_order_button_your_package_will_be_confirmed_then_you_can_press_view_orders_to_view_your_previously_made_orders">Once you add the amount of items that you need, press the basket button to view your basket and to see the package contents. On this page you should fill out the required details, once you sign in your name and number is already stored. You will only need to enter your address if your package is a delivery. Once you have entered your details, press the make order button your package will be confirmed, then you can press view orders to view your previously made orders.</string>
    <string name="image_button_keys">Image button keys</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="view_basket_from_homescreen">View basket from homescreen</string>
    <string name="view_basket_from_item_info_page">View basket from item info page</string>
    <string name="food_bank_categories">Food Bank Categories</string>
    <string name="number">Number</string>
    <string name="pick_up_date">Pick Up Date</string>
    <string name="pick_up_time">Pick up Time</string>
    <string name="food_bank_items">Food Bank Items</string>
    <string name="contact_us">Contact Us</string>

</resources>