<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".ContactDetails"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="420dp"
            android:layout_height="wrap_content">

        <TextView
            android:text="@string/contact_details"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="30dp"/>

        <TextView
            android:text="@string/address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textSize="24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/castle_park_rd_bangor_bt20_4td"
            android:textSize="20dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            android:text="@string/map"
            android:textSize="24dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/click_map_to_view_bigger_size_on_google_maps"
                android:textSize="18dp"/>

            <ImageView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-80dp"
                android:src="@drawable/map"
                android:textSize="10dp" />

            <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/contact_hours"
            android:textSize="24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mon_fri_09_00_to_17_00"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sat_09_00_to_15_30"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sun_09_00_to_13_00"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/contact_info"
            android:textSize="24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/contact_number_01169420330"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/email_aandndfb_btinternet_co_uk"
            android:textSize="20dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/other_info"
            android:textSize="24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="VAT no. 09112345600912"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/all_data_entered_by_users_is_processed_according_to_uk_law_and_will_not_be_stored_longer_than_needed"
            android:textSize="18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="@string/our_happy_customers_carousel"
                android:textSize="24dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/all_images_are_free_of_use_from_fotor"
                android:textSize="18dp" />


<com.denzcoskun.imageslider.ImageSlider
    android:id="@+id/carousel"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    app:auto_cycle="true"
    app:delay="2"
    app:period="2000"
    app:placeholder="@color/black"
    />
        </LinearLayout>
    </ScrollView>

</LinearLayout>