<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/foodbankimagebg"
    tools:context=".Signin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/sign_in"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/phone_number">
        </TextView>

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:text="@string/_07746969898"
            android:textSize="32sp"
            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold"
            android:text="@string/password">
        </TextView>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text="@string/_333"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true" />

        <info.hoang8f.widget.FButton
            android:id="@+id/btnSignIn"
            android:text="@string/sign_in"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:shadowEnabled="true"
            app:shadowHeight="5dp"
            app:cornerRadius="4dp"
            />


    </LinearLayout>
</RelativeLayout>
