<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/foodbankimagebg"
    tools:context=".MainActivity">
<TextView
 android:text="@string/welcome_to_the_ards_and_north_down_food_bank_app"
    android:textSize="24sp"
    android:textColor="@color/white"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
<LinearLayout
   android:orientation="vertical"
   android:layout_centerInParent="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

 <ImageView
     android:src="@drawable/logoblack"
     android:layout_width="300dp"
     android:layout_height="300dp"/>

</LinearLayout>

 <LinearLayout
  android:orientation="horizontal"
  android:layout_alignParentBottom="true"
  android:weightSum="2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">


 <info.hoang8f.widget.FButton
     android:id="@+id/btnSignUp"
  android:text="@string/sign_up"
  android:textColor="@android:color/white"
     android:layout_weight="1"
     android:layout_width="0dp"
  android:layout_height="wrap_content"
     android:layout_margin="8dp"
  app:shadowColor="@android:color/black"
  app:shadowEnabled="true"
  app:shadowHeight="5dp"
  app:cornerRadius="4dp"
/>

  <info.hoang8f.widget.FButton
      android:id="@+id/btnSignIn"
      android:text="@string/sign_in"
      android:textColor="@android:color/white"
      android:layout_weight="1"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      app:shadowColor="@android:color/black"
      app:shadowEnabled="true"
      app:shadowHeight="5dp"
      app:cornerRadius="4dp"
      />
 </LinearLayout>

</RelativeLayout>
